2004-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile: Added permview to the build.
	* permview.cs: Fixed option /OUTPUT to close the TextWriter so that 
	the output is available (in the file) after execution. The default
	execution (without /DECL) works with a *very* recent Mono runtime.

2004-12-17  Sebastien Pouliot  <sebastien@ximian.com>

	* permview.cs: New. Managed declarative security permission viewer for
	assemblies. The tools isn't yet part of the build as we're missing 
	some runtime support (for Fx 1.0/1.1).

2004-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* certmgr.cs, signcode.cs, sn.cs: Fixlets to removed compilation 
	warning (for unused variables).

2004-12-13  Sebastien Pouliot  <sebastien@ximian.com>

	* certmgr.cs: Add a new -ssl action to download and add the 
	certificates from an SSL connection into thr right stores.

2004-12-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Added a class to get informations from assembly
	attributes (and remove common code from all security tools).
	* caspol.cs: New. CAS policy management tool.
	* cert2spc.cs: Updated to use new AssemblyInfo class.
	* certmgr.cs: Updated to use new AssemblyInfo class.
	* chktrust.cs: Updated to use new AssemblyInfo class.
	* Makefile: Added caspol to the build.
	* MakeCert.cs: Updated to use new AssemblyInfo class.
	* secutil.cs: Updated to use new AssemblyInfo class.
	* setreg.cs: Updated to use new AssemblyInfo class.
	* signcode.cs: Updated to use new AssemblyInfo class.
	* sn.cs: Updated to use new AssemblyInfo class.

2004-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : test .mdb existence (for csc build).

2004-11-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile (PROGRAM_INSTALL_DIR): Define using $(FRAMEWORK_VERSION).

2004-11-22  Raja R Harinath  <rharinath@novell.com>

	* Makefile (all-local) [PROFILE=net_1_1_bootstrap]: Build
	profile-specific "bootstrap" sn.exe.